modified CSS, added more movies, and completed the Booklist component

--- a/part1/exercises/src/components/MovieList.module.css
+++ b/part1/exercises/src/components/MovieList.module.css
@@ -1,7 +1,11 @@
 .movieText {
-   color: black;
+   color: pink;
+   font-size: 1.3vw;
+   text-align: left;
+
 }
 
 .movieHeading {
-   color: black;
+   color: pink;
+   text-align: left;
 }
