--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,11 @@
 .choresText {
-   color: black;
+   color: purple;
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   font-size: 1.3vw;
+   font-style: italic;
 }
 
 .choresHeading {
-   color: black;
+   color: purple;
+   text-decoration: underline;
 }
