rearranged components to correct formatting

--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,11 +1,12 @@
 .choresText {
-   color: purple;
+   color: palevioletred;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 1.3vw;
    font-style: italic;
+   text-align: left;
 }
 
 .choresHeading {
-   color: purple;
    text-decoration: underline;
+   text-align: left;
 }
